<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post.PostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<TextView
            android:id="@+id/postPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/post_picture" />
-->


        <ImageButton
            android:id="@+id/post_image_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:padding="6dp"
            app:srcCompat="@drawable/lnf_add_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/post_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Spinner
                android:id="@+id/post_spinner_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/post_type" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/post_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Spinner
                android:id="@+id/post_spinner_status"
                android:layout_width="104dp"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <EditText
            android:id="@+id/post_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_name"
            android:inputType="textPersonName"
            android:text="@string/post_name" />

        <EditText
            android:id="@+id/post_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_color"
            android:inputType="textPersonName"
            android:text="@string/post_color" />

        <EditText
            android:id="@+id/post_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_date"
            android:inputType="date"
            android:text="@string/post_date" />

        <EditText
            android:id="@+id/post_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/post_hint_location"
            android:inputType="textPersonName"
            android:text="@string/post_location" />

        <EditText
            android:id="@+id/post_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_phone"
            android:inputType="phone"
            android:text="@string/post_phone" />

        <EditText
            android:id="@+id/post_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_email"
            android:inputType="textEmailAddress"
            android:text="@string/post_email" />

        <EditText
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_hint_description"
            android:inputType="textMultiLine"
            android:text="@string/post_description" />

        <ImageButton
            android:id="@+id/post_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:padding="6dp"
            app:srcCompat="@drawable/submit_button_medium" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>