<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_imageview"
                android:layout_width="209dp"
                android:layout_height="147dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="101dp"
                android:layout_marginStart="101dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@+id/profile_name_db"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/lnf_dog" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toTopOf="@+id/profile_type"
                app:layout_constraintEnd_toStartOf="@+id/profile_name_db"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_imageview"
                tools:text="@string/profile_name" />

            <TextView
                android:id="@+id/profile_name_db"
                android:layout_width="89dp"
                android:layout_height="24dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="246dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toTopOf="@+id/profile_type_db"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_name"
                app:layout_constraintTop_toBottomOf="@+id/profile_imageview" />

            <TextView
                android:id="@+id/profile_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/profile_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_name" />

            <TextView
                android:id="@+id/profile_type_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toTopOf="@+id/profile_color_db"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toEndOf="@+id/profile_type"
                app:layout_constraintTop_toBottomOf="@+id/profile_name_db" />

            <TextView
                android:id="@+id/profile_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_type"
                tools:text="@string/profile_color" />

            <TextView
                android:id="@+id/profile_color_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/profile_location_db"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/profile_color"
                app:layout_constraintTop_toBottomOf="@+id/profile_type_db" />

            <TextView
                android:id="@+id/profile_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_color"
                tools:text="@string/profile_location" />

            <TextView
                android:id="@+id/profile_location_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/profile_date_db"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.011"
                app:layout_constraintStart_toEndOf="@+id/profile_location"
                app:layout_constraintTop_toBottomOf="@+id/profile_color_db" />

            <TextView
                android:id="@+id/profile_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_location"
                tools:text="@string/profile_date" />

            <TextView
                android:id="@+id/profile_date_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/profile_phone_db"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.011"
                app:layout_constraintStart_toEndOf="@+id/profile_date"
                app:layout_constraintTop_toBottomOf="@+id/profile_location_db" />

            <TextView
                android:id="@+id/profile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="11dp"
                android:layout_marginTop="23dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toTopOf="@+id/profile_email"
                app:layout_constraintEnd_toStartOf="@+id/profile_phone_db"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_date"
                tools:text="@string/profile_phone" />

            <TextView
                android:id="@+id/profile_phone_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/profile_email_db"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.011"
                app:layout_constraintStart_toEndOf="@+id/profile_phone"
                app:layout_constraintTop_toBottomOf="@+id/profile_date_db" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_phone"
                tools:text="@string/profile_email" />

            <TextView
                android:id="@+id/profile_email_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/profile_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.037"
                app:layout_constraintStart_toEndOf="@+id/profile_email"
                app:layout_constraintTop_toBottomOf="@+id/profile_phone_db" />

            <TextView
                android:id="@+id/profile_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_email"
                tools:text="@string/profile_description" />

            <TextView
                android:id="@+id/profile_description_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/profile_status_db"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/profile_description"
                app:layout_constraintTop_toBottomOf="@+id/profile_email_db" />

            <TextView
                android:id="@+id/profile_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="81dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toTopOf="@+id/profile_edit_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_description"
                app:layout_constraintVertical_bias="0.012"
                tools:text="@string/profile_status" />

            <TextView
                android:id="@+id/profile_status_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toTopOf="@+id/profile_edit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/profile_status"
                app:layout_constraintTop_toBottomOf="@+id/profile_description_db" />

            <ImageButton
                android:id="@+id/profile_edit_button"
                android:layout_width="312dp"
                android:layout_height="93dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="49dp"
                android:layout_marginTop="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_status_db"
                app:srcCompat="@drawable/lnf_edit_animal" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>